Bug 419065 - Doesn't build with Qt 5.15
Summary: Doesn't build with Qt 5.15
Status: RESOLVED FIXED
Alias: None
Product: filelight
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.03.80
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Martin Sandsmark
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-21 00:06 UTC by Antonio Rojas
Modified: 2020-03-21 11:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2020-03-21 00:06:42 UTC
/build/filelight/src/filelight-20.03.80/src/settingsDialog.cpp:70:93: error: no matching function for call to ‘SettingsDialog::connect(QButtonGroup*&, <unresolved overloaded function type>, SettingsDialog*, void (SettingsDialog::*)(QAbstractButton*))’
   70 |     connect(m_schemaGroup, &QButtonGroup::buttonClicked, this, &SettingsDialog::changeScheme);
      |                                                                                             ^



EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Laurent Montel 2020-03-21 08:45:26 UTC
Git commit f0d1f4f3756548dd09383ca4fb0857fe03af81d6 by Laurent Montel.
Committed on 21/03/2020 at 08:44.
Pushed by mlaurent into branch 'master'.

Fix Bug 419065 - Doesn't build with Qt 5.15

M  +0    -4    src/settingsDialog.cpp

https://commits.kde.org/filelight/f0d1f4f3756548dd09383ca4fb0857fe03af81d6
Comment 2 Antonio Rojas 2020-03-21 10:32:12 UTC
Thanks, please backport this and 54eb43477276ef373e73923e1fcfc5a3cbfe2d73 to releases/20.04
Comment 3 Laurent Montel 2020-03-21 11:03:11 UTC
Git commit df467e01d3ad7df75ba0469c5577ceca97155892 by Laurent Montel.
Committed on 21/03/2020 at 11:02.
Pushed by mlaurent into branch 'release/20.04'.

Fix Bug 419065 - Doesn't build with Qt 5.15
(cherry picked from commit f0d1f4f3756548dd09383ca4fb0857fe03af81d6)

M  +0    -4    src/settingsDialog.cpp

https://commits.kde.org/filelight/df467e01d3ad7df75ba0469c5577ceca97155892