Fix Bug 419065 - Doesn't build with Qt 5.15

BUG: 419065
(cherry picked from commit f0d1f4f3756548dd09383ca4fb0857fe03af81d6)